--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,10 +7,7 @@
 			"problemMatcher": [
 				"$tsc"
 			],
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
+			"group": "build",
 			"label": "tsc: build - tsconfig.json"
 		},
 		{
@@ -22,6 +19,30 @@
 			],
 			"group": "build",
 			"label": "tsc: watch - tsconfig.json"
+		},
+		{
+			"type": "shell",
+			"label": "C/C++: g++ build active file",
+			"command": "/usr/bin/g++",
+			"args": [
+				"-g",
+				"${workspaceFolder}/*cpp",
+				"${workspaceFolder}/src/*cpp",
+				"-I",
+				"${workspaceFolder}/includes",
+				"-o",
+				"${workspaceFolder}/world"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"problemMatcher": [
+				"$gcc"
+			],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
