Major Change-> Each box will be just a point, no more a square with 4 corners, last commit before i change the initialising values of all ..._abs, ..._min, ..._max in constructor
Changes -> will use signed coordinates everywhere now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,8 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xtree": "cpp"
     },
     "workbench.colorCustomizations": {
         "activityBar.background": "#13332D",
