graph_Mat completed, as needs, further modifications will likely be in inherited child classes
Major Change - User inputs in form of rows*columns, but graph internally uses it as y*x (logically), and also the boxes are intitialized with the usual xy coordinate system only

--- a/graphMat/.vscode/settings.json
+++ b/graphMat/.vscode/settings.json
@@ -6,8 +6,17 @@
         "new": "cpp",
         "numeric": "cpp",
         "system_error": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "list": "cpp",
+        "vector": "cpp",
+        "xlocnum": "cpp",
+        "xstring": "cpp",
+        "iosfwd": "cpp"
     },
+    "C_Cpp.default.includePath": [
+        "${default}",
+        "${workspaceFolder}/.."
+    ],
     "workbench.colorCustomizations": {
         "activityBar.background": "#551B00",
         "titleBar.activeBackground": "#772600",
