--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 file(GLOB SOURCES "src/*.cpp")
 add_executable(simulator main.cpp ${SOURCES})
+add_executable(test graphMat/test.cxx)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
@@ -13,3 +14,4 @@ target_link_libraries(simulator PRIVATE Threads::Threads)
 
 target_include_directories(simulator PRIVATE includes)
 target_include_directories(simulator PRIVATE .)
+target_include_directories(test PRIVATE .)
