Major Change -> Mostly made the previous code use Graph_Matrix and Graph_Boxes, use the updated path finders
Major Change #2 -> (only in regard to the repo, not project) Added the work i had first done regarding this in typescript

Change #3 -> Removed path_finder class; I had originally wanted to use it, but that was when i was using vector<vector>, now that we have inherited worldPlot class from the Graph_Mat, we can already have quite abstraction and control, so it also will have a path function built in :D

PS - To anyone reading this, yes there is quite more inheritance then you may think it needs, but that's so that i can use the common parts (the base classes) later too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,8 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "variant": "cpp"
     },
     "workbench.colorCustomizations": {
         "activityBar.background": "#13332D",
