Removed Expansion and direct modification of world_plot control from World class, more changes to complete some missing parts
Another Change- World_Ptr will be a raw pointer, not a std::shared_ptr, typedefs have been use to somewhat ease a shift in the future

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 experiment*
 delete*
 
+# i am not commiting this directory to git, it contains the pdcurses.lib and includes for pdcurses
+curses/
+
 # C++
 #CMake
 CMakeLists.txt.user
