Added display controls, working good in isolation
Work from World_Node's side remaining for the simulation display

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,7 +73,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "future": "cpp",
+        "resumable": "cpp"
     },
     "workbench.colorCustomizations": {
         "activityBar.background": "#13332D",
