Major changes to allow successful builds, no added feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,8 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "future": "cpp",
-        "resumable": "cpp"
+        "resumable": "cpp",
+        "any": "cpp"
     },
     "workbench.colorCustomizations": {
         "activityBar.background": "#13332D",
