--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ file(GLOB SOURCES "src/*.cpp")
 add_executable(simulator main.cpp ${SOURCES})
 
 # Edit the 3 lines, according to your build of curses (ncurse or pdcurses)
-set(CURSES_INCLUDE_PATH ./curses/includes)
-set(CURSES_LIBRARY ./curses/pdcurses.lib)
-target_include_directories(simulator PRIVATE curses/includes)
+# set(CURSES_INCLUDE_PATH ./curses/includes)
+# set(CURSES_LIBRARY ./curses/pdcurses.lib)
+# target_include_directories(simulator PRIVATE curses/includes)
 # Edit the previous 3 lines, according to your build of curses (ncurse or pdcurses)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -17,6 +17,7 @@ find_package(Threads REQUIRED)
 find_package(Curses REQUIRED)
 
 target_link_libraries(simulator PRIVATE Threads::Threads)
+target_link_libraries(simulator PRIVATE curses)
 
 target_include_directories(simulator PRIVATE includes)
 target_include_directories(simulator PRIVATE .)
