--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(World-Line-Simulator VERSION 0.1.5)
+project(World-Line-Simulator VERSION 0.271)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -7,9 +7,9 @@ file(GLOB SOURCES "src/*.cpp")
 add_executable(simulator main.cpp ${SOURCES})
 
 # Edit the 3 lines, according to your build of curses (ncurse or pdcurses)
-# set(CURSES_INCLUDE_PATH ./curses/includes)
-# set(CURSES_LIBRARY ./curses/pdcurses.lib)
-# target_include_directories(simulator PRIVATE curses/includes)
+set(CURSES_INCLUDE_PATH ./curses/includes)
+set(CURSES_LIBRARY ./curses/pdcurses.lib)
+target_include_directories(simulator PRIVATE curses/includes)
 # Edit the previous 3 lines, according to your build of curses (ncurse or pdcurses)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
