--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(World-Line-Simulator VERSION 0.271)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(test test.cxx)
+# add_executable(test "test.cxx")
 
 file(GLOB SOURCES "src/*.cpp")
 # later distribute display into a library, and link to it
