--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.10.0)
 project(World-Line-Simulator VERSION 0.271)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 
-# add_executable(test "test.cxx")
+include_directories(includes)
+include_directories(.)
 
 file(GLOB SOURCES "src/*.cpp")
 # later distribute display into a library, and link to it
 file(GLOB DISP_SOURCES "display/src/*.cpp")
-add_executable(simulator main.cpp ${SOURCES} ${DISP_SOURCES})
+add_executable(simulator main.cpp ${SOURCES} ${DISP_SOURCES} "test.cxx")
 
 # Edit the 3 lines, according to your build of curses (ncurse or pdcurses)
 set(CURSES_INCLUDE_PATH ./curses/includes)
@@ -20,10 +21,9 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 find_package(Curses REQUIRED)
 
-target_link_libraries(simulator PRIVATE Threads::Threads)
+link_libraries(Threads::Threads)
 target_link_libraries(simulator PRIVATE curses)
 
-target_include_directories(simulator PRIVATE includes)
-target_include_directories(simulator PRIVATE .)
+add_executable(test "test.cxx")
 
 # define a macro here "__DEBUG"
