Shifted to using 3D Cube Matrix provided by Graph_Mat library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(World-Line-Simulator VERSION 0.271)
 
 set(CMAKE_CXX_STANDARD 20)
 
+
 #set(CMAKE_TOOLCHAIN_FILE "C:/Users/adity/libs/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
 file(GLOB SOURCES "src/*.cpp")
@@ -11,6 +12,8 @@ file(GLOB DISP_SOURCES "display/src/*.cpp")
 
 add_library(display STATIC ${DISP_SOURCES})
 
+add_compile_definitions(GRAPH_MAT_NO_COORD)
+add_executable(graph_test "graphMat/test.cxx")
 add_executable(simulator main.cpp ${SOURCES})
 target_link_libraries(simulator PRIVATE display)
 
@@ -18,6 +21,8 @@ include_directories(includes)
 include_directories(.)
 
 #add_library()
+
+set(DEBUG_MODE true)
 
 # Edit the 3 lines, according to your build of curses (ncurse or pdcurses)
 set(CURSES_INCLUDE_PATH "C:/Users/adity/libs/vcpkg/packages/pdcurses_x64-windows/include")
@@ -35,7 +40,7 @@ link_libraries(Threads::Threads)
 target_link_libraries(display PUBLIC ${CURSES_LIBRARY}/pdcurses.lib)
 
 set(TEST_CPP "src/world.cpp"  "src/world_node.cpp"  "src/world_plot.cpp"  "src/snake.cpp" "src/path_finder.cpp")
-add_executable(test "test.cxx"  ${SOURCES} ${DISP_SOURCES})
+add_executable(test "test.cxx"  ${SOURCES1})
 target_link_libraries(test PRIVATE display)
 
 # define a macro here "__DEBUG"
