Better dependency management; Entities updated, bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 experiment*
 delete*
 .vs
+.vscode
 
 # i am not commiting this directory to git, it contains the pdcurses.lib and includes for pdcurses
 curses/
