--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "ext\\glfwpp"]
 	path = ext\\glfwpp
 	url = https://github.com/janekb04/glfwpp
+[submodule "ext/utilpp"]
+	path = ext/utilpp
+	url = https://github.com/adi-g15/utilpp
+[submodule "ext/nanogui"]
+	path = ext/nanogui
+	url = https://github.com/mitsuba-renderer/nanogui.git
