--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,10 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Clone Dependencies
-      run: git submodule update --init --recursive
-      working-directory: ${{github.workspace}}/
+      with:
+        submodules: recursive
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
