Final Changes; Finishing touches
Time travel; Improved display, more power to node adapter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,15 @@ if(NOT IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/include")
         )
 endif()
 
-add_subdirectory(ext/loguru)
+add_compile_definitions(GRAPH_MAT_NO_COORD)
+add_compile_definitions(DEBUG)
+
+set(NANOGUI_BUILD_EXAMPLES  OFF CACHE BOOL "" FORCE)
+set(NANOGUI_BUILD_SHARED    OFF CACHE BOOL "" FORCE)
+set(NANOGUI_BUILD_PYTHON    OFF CACHE BOOL "" FORCE)
+set(NANOGUI_INSTALL         OFF CACHE BOOL "" FORCE)
+
+add_subdirectory(ext/quill)
 add_subdirectory(ext/nanogui)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -25,26 +33,17 @@ find_package(Threads REQUIRED)
 
 include_directories(includes)   # should also be available to display
 include_directories(.)
-include_directories(ext/nanogui/include)
 include_directories(ext/graphMat/includes/)
 include_directories(ext/utilpp/includes/)
-include_directories(ext/loguru/)
 
 file(GLOB SOURCES "src/Entities/*.cpp" "src/*.cpp")
 file(GLOB DISP_SOURCES "display/src/*.cpp")
 
-#add_compile_definitions(GRAPH_MAT_NO_COORD)
-add_compile_definitions(DEBUG)
 add_executable(simulator main.cpp ${SOURCES} ${DISP_SOURCES})
 
 target_link_libraries(simulator PRIVATE Threads::Threads)
-target_link_libraries(simulator PRIVATE loguru)
+target_link_libraries(simulator PRIVATE quill::quill )
 target_link_libraries(simulator PRIVATE nanogui)
-
-set(NANOGUI_BUILD_EXAMPLES  OFF CACHE BOOL "" FORCE)
-set(NANOGUI_BUILD_SHARED    OFF CACHE BOOL "" FORCE)
-set(NANOGUI_BUILD_PYTHON    OFF CACHE BOOL "" FORCE)
-set(NANOGUI_INSTALL         OFF CACHE BOOL "" FORCE)
 
 # set(CMAKE_TOOLCHAIN_FILE "C:/Users/adity/libs/vcpkg/scripts/buildsystems/vcpkg.cmake")
 # file(GLOB DISP_SOURCES "display/src/*.cpp")
