--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/utilpp"]
 	path = ext/utilpp
 	url = https://github.com/adi-g15/utilpp
+[submodule "ext\\quill"]
+	path = ext\\quill
+	url = https://github.com/odygrd/quill
