Moved ss from Sources to this repo

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ experiment*
 delete*
 .vs
 .vscode
+*.log
 
 # i am not commiting this directory to git, it contains the pdcurses.lib and includes for pdcurses
 curses/
