Added ArrayDiskSaver module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,10 @@ include(CTest)
 # Later utilise features in C++20
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+#set(CMAKE_CXX_CLANG_TIDY 
+#        clang-tidy;
+#        -header-filter=.;
+#        -checks=*;)
 
 if(NOT IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/include")
     message(FATAL_ERROR "The nanogui dependency is missing!! "
@@ -39,6 +43,13 @@ include_directories(.)
 include_directories(ext/graphMat/includes/)
 include_directories(ext/utilpp/includes/)
 include_directories(ext/csv_parser/)
+
+add_library(arraydisksaver "modules/internal/ArrayDiskSaver/src/impl.cpp")
+target_include_directories(arraydisksaver PRIVATE "modules/internal/ArrayDiskSaver/include")
+
+add_executable(test_target "modules/internal/ArrayDiskSaver/tests/array_file.cpp")
+target_include_directories(test_target PRIVATE "modules/internal/ArrayDiskSaver/include")
+target_link_libraries(test_target PRIVATE arraydisksaver)
 
 file(GLOB SOURCES "src/Entities/*.cpp" "src/*.cpp")
 file(GLOB CUSTOM_ENTITIES_SRC "src/Entities/Custom/*.cpp")
