Shift to CPM for dependency management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10.0)
+cmake_minimum_required(VERSION 3.15)
 project(WorldLineSim
     DESCRIPTION "WorldLine Simulator"
     LANGUAGES CXX
@@ -10,12 +10,23 @@ include(CTest)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-if(NOT IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/ext/nanogui/include")
-    message(FATAL_ERROR "The nanogui dependency is missing!! "
-            "You might not have cloned the repo with --recursive "
-            "You will need to clone the dependencies too, use \`git submodule --init --recursive\`"
-        )
-endif()
+# add CPM
+include(cmake/CPM.cmake)
+
+# graphMat & utilpp
+CPMAddPackage("gh:adi-g15/graphMat@1.0.1")
+CPMAddPackage("gh:adi-g15/utilpp@1.0.1")
+
+# spdlog
+CPMAddPackage("gh:gabime/spdlog@1.8.5")
+
+# nanogui
+CPMAddPackage(
+	NAME "nanogui"
+	GITHUB_REPOSITORY "mitsuba-renderer/nanogui"
+	GIT_TAG "0146a88b2214cd5c5c29e6dfa8d3d3d0e9ab6d9d"
+	OPTIONS "NANOGUI_BUILD_EXAMPLES  OFF"	"NANOGUI_BUILD_SHARED    OFF"	"NANOGUI_BUILD_PYTHON    OFF"	"NANOGUI_INSTALL         OFF"
+	)
 
 if(CMAKE_BUILD_TYPE EQUAL "Release")
     add_compile_definitions(GRAPH_MAT_NO_COORD)
@@ -23,22 +34,11 @@ else()
     add_compile_definitions(DEBUG)
 endif()
 
-set(NANOGUI_BUILD_EXAMPLES  OFF CACHE BOOL "" FORCE)
-set(NANOGUI_BUILD_SHARED    OFF CACHE BOOL "" FORCE)
-set(NANOGUI_BUILD_PYTHON    OFF CACHE BOOL "" FORCE)
-set(NANOGUI_INSTALL         OFF CACHE BOOL "" FORCE)
-
-add_subdirectory(ext/nanogui)
-add_subdirectory(ext/spdlog)
-
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
 include_directories(includes)   # should also be available to display
 include_directories(.)
-include_directories(ext/graphMat/includes/)
-include_directories(ext/utilpp/includes/)
-include_directories(ext/csv_parser/)
 
 file(GLOB SOURCES "src/Entities/*.cpp" "src/*.cpp")
 file(GLOB CUSTOM_ENTITIES_SRC "src/Entities/Custom/*.cpp")
@@ -46,14 +46,8 @@ file(GLOB DISP_SOURCES "display/src/*.cpp")
 
 add_executable(simulator main.cpp ${SOURCES} ${DISP_SOURCES} ${CUSTOM_ENTITIES_SRC})
 
+target_link_libraries(simulator PRIVATE graphMat)
+target_link_libraries(simulator PRIVATE utilpp)
 target_link_libraries(simulator PRIVATE Threads::Threads)
 target_link_libraries(simulator PRIVATE nanogui spdlog::spdlog)
 
-# set(CMAKE_TOOLCHAIN_FILE "C:/Users/adity/libs/vcpkg/scripts/buildsystems/vcpkg.cmake")
-# file(GLOB DISP_SOURCES "display/src/*.cpp")
-# set(CURSES_INCLUDE_PATH "C:/Users/adity/libs/vcpkg/packages/pdcurses_x64-windows/include")
-# set(CURSES_LIBRARY "C:/Users/adity/libs/vcpkg/packages/pdcurses_x64-windows/lib")
-#target_include_directories(simulator PRIVATE curses/includes)
-# include_directories(${CURSES_INCLUDE_PATH})
-# find_package(Curses REQUIRED)
-# target_link_libraries(display PUBLIC ${CURSES_LIBRARY}/pdcurses.lib)
