A lot of changes... mainly GDSC meta entity, ...
Some changes include changing type of UNIT_TIME to chrono::seconds
instead of float, this actually saved a possible error, and also makes
much sense than previous float
Better language ettiquite 🥲
Dependency version upgrade
More CMakeLists changes, including now can access the 'db' directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ project(WorldLineSim
     )
 include(CTest)
 
+#cmake_policy(SET CMP0097 NEW)
+
 # Later utilise features in C++20
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
@@ -13,12 +15,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 # add CPM
 include(cmake/CPM.cmake)
 
-
 file(GLOB SOURCES "src/Entities/*.cpp" "src/*.cpp")
-file(GLOB CUSTOM_ENTITIES_SRC "src/Entities/Custom/*.cpp")
+file(GLOB CUSTOM_ENTITIES_SRC "src/Entities/Custom/*.cpp" "src/Entities/Meta/Custom/*/*.cpp")
 file(GLOB DISP_SOURCES "display/src/*.cpp")
 
 add_executable(worldlinesim main.cpp ${SOURCES} ${DISP_SOURCES} ${CUSTOM_ENTITIES_SRC})
+
+add_custom_command(TARGET worldlinesim POST_BUILD
+		   COMMAND ${CMAKE_COMMAND} -E copy_directory
+		   	${CMAKE_SOURCE_DIR}/db $<TARGET_FILE_DIR:worldlinesim>/db
+	)
 
 if(CMAKE_BUILD_TYPE EQUAL "Release")
     add_compile_definitions(GRAPH_MAT_NO_COORD)
@@ -30,10 +36,9 @@ include_directories(includes)   # should also be available to display
 include_directories(.)
 
 
-
 # graphMat & utilpp
 CPMAddPackage("gh:adi-g15/graphMat@1.0.1")
-CPMAddPackage("gh:adi-g15/utilpp@1.0.1")
+CPMAddPackage("gh:adi-g15/utilpp@1.0.3")
 target_link_libraries(worldlinesim PRIVATE graphMat)
 target_link_libraries(worldlinesim PRIVATE utilpp)
 
@@ -44,11 +49,19 @@ CPMAddPackage("gh:gabime/spdlog@1.8.5")
 CPMAddPackage(
 	NAME "nanogui"
 	GITHUB_REPOSITORY "mitsuba-renderer/nanogui"
-	GIT_TAG "0146a88b2214cd5c5c29e6dfa8d3d3d0e9ab6d9d"
+	GIT_TAG "9371d845cbdeb548ac8677656669044fd3a3f2a2"
 	OPTIONS "NANOGUI_BUILD_EXAMPLES OFF" "NANOGUI_BUILD_SHARED OFF"	"NANOGUI_BUILD_PYTHON OFF" "NANOGUI_INSTALL OFF"
 	)
 
-target_link_libraries(worldlinesim PRIVATE nanogui spdlog::spdlog)
+# yaml-cpp
+CPMAddPackage(
+	GITHUB_REPOSITORY "jbeder/yaml-cpp"
+	GIT_TAG yaml-cpp-0.7.0
+	GIT_SUBMODULES ""
+	OPTIONS "YAML_CPP_BUILD_TESTS OFF" "YAML_CPP_INSTALL OFF"
+	)
+
+target_link_libraries(worldlinesim PRIVATE nanogui spdlog::spdlog yaml-cpp)
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
